finished contact page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
 
     <div class="container-fluid" style="display: contents">
-        <div class="row-bg">
+        <div class="row-bg mx-auto">
             <div class="card col container-fluid mx-auto" style="display: block; max-width: 960px">
                     <div><h5 class="card-title text-center" style="font-family:Georgia, 'Times New Roman', Times, serif; font-size: 24px">About Me</h5>
                     <hr>
