--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 
     <div class="container-fluid">
         <nav class="container navbar navbar-expand-lg navbar-light bg-light mx-auto" style="max-width: 960px">
-        <a class="navbar-brand" href="#" style="font-family: Georgia, 'Times New Roman', Times, serif; font-size: 32px; color: white; background-color: #4aaaa5; padding: 10px 30px; margin: 0">Mario Zetter</a>
+        <a class="navbar-brand" href="index.html" style="font-family: Georgia, 'Times New Roman', Times, serif; font-size: 32px; color: white; background-color: #4aaaa5; padding: 10px 30px; margin: 0">Mario Zetter</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="#">About <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="#">Portfolio</a>
-                <a class="nav-item nav-link" href="#">Contact</a>
+                <a class="nav-item nav-link active" href="index.html">About <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
+                <a class="nav-item nav-link" href="contact.html">Contact</a>
             </div>
             </div>
         </nav>
